--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "start": "node src/Server.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.3.0"
